# prescope

./: .gitmodules  README.md  Topic_Extraction.ipynb  pyproject.toml  topic_mapping.ipynb
convert/: Json2Csv.py
data/: covid-preprints_topics.csv  projects_som.csv
qgis/: hexcount.gpkg  hexgrid.gpkg  preprint-map.qgz  preprint-map.qgz.qto3settings  preprint-map_umap.qgz  projects_som.csv  temp1.dbf  temp1.shp  temp1.shx
topic_space/: SOM.py
web/qgis2web_2021_03_19-18_11_16_034243/: index.html
web/qgis2web_2021_03_19-18_12_40_598600/mapbox/: style.js
web/qgis2web_2021_03_19-18_20_11_167222/: index.html
web/qgis2web_2021_03_20-13_52_06_637621/: index.html
web/qgis2web_2021_03_20-13_52_06_637621/mapbox/: style.js
web/qgis2web_2021_03_20-13_54_29_702649/resources/: qgis2web.js
web/qgis2web_2021_03_20-13_54_33_726451/styles/: covid_preprints_projects_0_style.js
web/qgis2web_2021_03_20-14_21_21_890940/: index.html
web/qgis2web_2021_03_20-14_21_21_890940/layers/: layers.js
web/qgis2web_2021_03_20-14_21_21_890940/resources/: qgis2web.js
